open ai implemented database fetching query

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
       </svg>
     </a>
 </div>
-
+<app-chatbot></app-chatbot>
 <!-- This is the Dropdown form  -->
 <form class="custom-form">
   <h4><strong>List of Databases: </strong></h4>
@@ -47,4 +47,5 @@
     </li>
   </ul>
 </div>
+
 <router-outlet></router-outlet>
