--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -62,6 +62,7 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 4%;
   height: 50vh; /* This ensures it takes up the full viewport height */
 }
 
